# matchbook-log-analyser

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
configs/: schema_metadata.yaml
docs/: anomaly_findings.md  setup.md
pages/: dashboard.py
src/: columns.py  log_analyser.py  log_loader.py  yaml_loader.py
tests/: test_log_analyser.py  test_log_loader.py  test_yaml_loader.py
